Done with the navBar

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 /* General typography */
 *{
+  padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
@@ -11,40 +12,46 @@ body{
 /* Navbar typography and styling */
 /* the whole navBar */
 #navBar {
-  position: relative;
+  display: flex;
+  flex-direction: column;
   background-color: rgb(31, 30, 30);
-  height: 15vh;
+  height: 14vh;
+  padding: 0;
+  margin: 0;
 }
 /* h1 in the navBar  */
 #navBar > h1{
   font-size: 25px;
   color: gray;
+  margin-bottom: 16px;
 }
 /* ul in the navBar */
 #navBar ul {
-  position: absolute;
-  bottom: 0;
-  border: 2px solid green;
-  display : flex;
+  display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  
-  
 }
+
 /* li in the navBar */
 #navBar ul > li{
   list-style: none;
   
-  
-  
-  
 }
+
 /* a in the navBar */
 #navBar ul li > a {
   text-decoration: none;
   padding: 10px;
   font-size: 22px;
   color: gray;
+
+}
+
+/* a:hover styling */
+#navBar ul li > a:hover{
+  color:green;
+  border-bottom: 4px solid green;
+  
 }
 
 
